--- a/app-football/package.json
+++ b/app-football/package.json
@@ -10,10 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/inter": "^5.1.1",
+    "@mui/joy": "^5.0.0-beta.51",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "http-proxy-middleware": "^3.0.3",
     "react": "^18.3.1",
+    "react-animated-heart": "^0.0.8",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1"
