--- a/app-football/package.json
+++ b/app-football/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app-football",
-  "homepage": "https://omerbur.github.io/app-football/",
+  "homepage": "https://Omerbur.github.io/app-football/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
