--- a/app-football/package.json
+++ b/app-football/package.json
@@ -1,6 +1,5 @@
 {
   "name": "app-football",
-  "homepage": "https://Omerbur.github.io/app-football/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,9 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
